@@ -104,6 +104,7 @@ namespace LinuxSampler { namespace sfz {
             EngineChannel* GetSfzEngineChannel();
             
             friend class EGv1Unit;
+            friend class FilEGUnit;
             friend class PitchEGUnit;
             friend class PitchLFOUnit;
             friend class AmpLFOUnit;
